--- a/index.html
+++ b/index.html
@@ -262,16 +262,46 @@
             <!-- Player Stats and Image -->
             <div class="player-section">
                 <div class="stats">
-                    <p>Max Health: <span id="playerHealthStat"></span></p>
-                    <p>Dmg: <span id="playerDamageStat"></span></p>
-                    <p>Speed: <span id="playerAttackSpeedStat"></span></p>
-                    <p>Defense: <span id="playerDefenseStat"></span></p>
-                    <p id="playerCritChanceContainer">Crit: <span id="playerCritChanceStat"></span></p>
-                    <p id="playerCritDamageContainer">Crit Dmg: <span id="playerCritDamageStat"></span></p>
-                    <p id="playerDodgeContainer">Dodge: <span id="playerDodgeStat"></span></p>
-                    <p id="playerNonCritDodgeContainer">Non-Crit Dodge: <span id="playerNonCritDodgeStat"></span></p>
-                    <p id="playerStunContainer">Stun: <span id="playerStunStat"></span></p>
-                    <p id="playerAbsorbContainer">Absorb: <span id="playerAbsorbStat"></span></p>
+                    <div class="STAT">
+                        <div>MAX HP:</div>
+                        <div id="playerHealthStat"></div>
+                    </div>
+                    <div class="STAT">
+                        <span>DAMAGE:</span> 
+                        <span id="playerDamageStat"></span>
+                    </div>
+                    <div class="STAT">
+                        <span>SPEED:</span> 
+                        <span id="playerAttackSpeedStat"></span>
+                    </div>
+                    <div class="STAT">
+                        <span>DEFENSE:</span> 
+                        <span id="playerDefenseStat"></span>
+                    </div>
+                    <div id="playerCritChanceContainer" class="STAT">
+                        <span>CRIT:</span> 
+                        <span id="playerCritChanceStat"></span>
+                    </div>
+                    <div id="playerCritDamageContainer" class="STAT">
+                        <span>CRIT DMG:</span> 
+                        <span id="playerCritDamageStat"></span>
+                    </div>
+                    <div id="playerDodgeContainer" class="STAT">
+                        <span>DODGE:</span> 
+                        <span id="playerDodgeStat"></span>
+                    </div>
+                    <div id="playerNonCritDodgeContainer" class="STAT">
+                        <span>NON-CRIT DODGE:</span> 
+                        <span id="playerNonCritDodgeStat"></span>
+                    </div>
+                    <div id="playerStunContainer" class="STAT">
+                        <span>STUN:</span>
+                        <span id="playerStunStat"></span>
+                    </div>
+                    <div id="playerAbsorbContainer" class="STAT">
+                        <span>ABSORB:</span> 
+                        <span id="playerAbsorbStat"></span>
+                    </div>
                 </div>
                 <div id="playerImageContainer"></div>
                 <div class="health-bar">
@@ -287,16 +317,46 @@
             <!-- Enemy Stats and Image -->
             <div class="enemy-section">
                 <div class="stats">
-                    <p>Health: <span id="enemyHealthStat"></span></p>
-                    <p>Dmg: <span id="enemyDamageStat"></span></p>
-                    <p>Speed: <span id="enemyAttackSpeedStat"></span></p>
-                    <p>Defense: <span id="enemyDefenseStat"></span></p>
-                    <p id="enemyCritChanceContainer">Crit: <span id="enemyCritChanceStat"></span></p>
-                    <p id="enemyCritDamageContainer">Crit Dmg: <span id="enemyCritDamageStat"></span></p>
-                    <p id="enemyDodgeContainer">Dodge: <span id="enemyDodgeStat"></span></p>
-                    <p id="enemyNonCritDodgeContainer">Non-Crit Dodge: <span id="enemyNonCritDodgeStat"></span></p>
-                    <p id="enemyStunContainer">Stun: <span id="enemyStunStat"></span></p>
-                    <p id="enemyAbsorbContainer">Absorb: <span id="enemyAbsorbStat"></span></p>
+                    <div class="STAT">
+                        <div>HP:</div> 
+                        <div id="enemyHealthStat"></div>
+                    </div>
+                    <div class="STAT">
+                        <div>DAMAGE:</div> 
+                        <div id="enemyDamageStat"></div>
+                    </div>
+                    <div class="STAT">
+                        <div>SPEED:</div> 
+                        <div id="enemyAttackSpeedStat"></div>
+                    </div>
+                    <div class="STAT">
+                        <div>DEFENSE:</div> 
+                        <div id="enemyDefenseStat"></div>
+                    </div>
+                    <div id="enemyCritChanceContainer" class="STAT">
+                        <div>CRIT:</div> 
+                        <div id="enemyCritChanceStat"></div>
+                    </div>
+                    <div id="enemyCritDamageContainer" class="STAT">
+                        <div>CRIT DMG:</div> 
+                        <div id="enemyCritDamageStat"></div>
+                    </div>
+                    <div id="enemyDodgeContainer" class="STAT">
+                        <div>DODGE:</div>
+                        <div id="enemyDodgeStat"></div>
+                    </div>
+                    <div id="enemyNonCritDodgeContainer" class="STAT">
+                        <div>NON-CRIT DODGE:</div> 
+                        <div id="enemyNonCritDodgeStat"></div>
+                    </div>
+                    <div id="enemyStunContainer" class="STAT">
+                        <div>STUN:</div> 
+                        <div id="enemyStunStat"></div>
+                    </div>
+                    <div id="enemyAbsorbContainer" class="STAT">
+                        <div>ASBORD:</div> 
+                        <div id="enemyAbsorbStat"></div>
+                    </div>
                 </div>
                 <div id="enemyImageContainer"></div>
                 <div class="health-bar">
@@ -411,7 +471,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.9285</h4>
+            <h4>Degens Idle v0.9286</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
