--- a/index.html
+++ b/index.html
@@ -263,43 +263,43 @@
             <div class="player-section">
                 <div class="stats">
                     <div class="STAT">
-                        <div>MAX HP:</div>
+                        <div>Max HP:</div>
                         <div id="playerHealthStat"></div>
                     </div>
                     <div class="STAT">
-                        <span>DAMAGE:</span> 
+                        <span>Damage:</span> 
                         <span id="playerDamageStat"></span>
                     </div>
                     <div class="STAT">
-                        <span>SPEED:</span> 
+                        <span>Speed:</span> 
                         <span id="playerAttackSpeedStat"></span>
                     </div>
                     <div class="STAT">
-                        <span>DEFENSE:</span> 
+                        <span>Defense:</span> 
                         <span id="playerDefenseStat"></span>
                     </div>
                     <div id="playerCritChanceContainer" class="STAT">
-                        <span>CRIT:</span> 
+                        <span>Crit:</span> 
                         <span id="playerCritChanceStat"></span>
                     </div>
                     <div id="playerCritDamageContainer" class="STAT">
-                        <span>CRIT DMG:</span> 
+                        <span>Crit Dmg:</span> 
                         <span id="playerCritDamageStat"></span>
                     </div>
                     <div id="playerDodgeContainer" class="STAT">
-                        <span>DODGE:</span> 
+                        <span>Dodge:</span> 
                         <span id="playerDodgeStat"></span>
                     </div>
                     <div id="playerNonCritDodgeContainer" class="STAT">
-                        <span>NON-CRIT DODGE:</span> 
+                        <span>Non-Crit Dodge:</span> 
                         <span id="playerNonCritDodgeStat"></span>
                     </div>
                     <div id="playerStunContainer" class="STAT">
-                        <span>STUN:</span>
+                        <span>Stun:</span>
                         <span id="playerStunStat"></span>
                     </div>
                     <div id="playerAbsorbContainer" class="STAT">
-                        <span>ABSORB:</span> 
+                        <span>Absorb:</span> 
                         <span id="playerAbsorbStat"></span>
                     </div>
                 </div>
@@ -318,43 +318,43 @@
             <div class="enemy-section">
                 <div class="stats">
                     <div class="STAT">
-                        <div>HP:</div> 
+                        <div>Max HP:</div> 
                         <div id="enemyHealthStat"></div>
                     </div>
                     <div class="STAT">
-                        <div>DAMAGE:</div> 
+                        <div>Damage:</div> 
                         <div id="enemyDamageStat"></div>
                     </div>
                     <div class="STAT">
-                        <div>SPEED:</div> 
+                        <div>Speed:</div> 
                         <div id="enemyAttackSpeedStat"></div>
                     </div>
                     <div class="STAT">
-                        <div>DEFENSE:</div> 
+                        <div>Defense:</div> 
                         <div id="enemyDefenseStat"></div>
                     </div>
                     <div id="enemyCritChanceContainer" class="STAT">
-                        <div>CRIT:</div> 
+                        <div>Crit:</div> 
                         <div id="enemyCritChanceStat"></div>
                     </div>
                     <div id="enemyCritDamageContainer" class="STAT">
-                        <div>CRIT DMG:</div> 
+                        <div>Crit Dmg:</div> 
                         <div id="enemyCritDamageStat"></div>
                     </div>
                     <div id="enemyDodgeContainer" class="STAT">
-                        <div>DODGE:</div>
+                        <div>Dodge:</div>
                         <div id="enemyDodgeStat"></div>
                     </div>
                     <div id="enemyNonCritDodgeContainer" class="STAT">
-                        <div>NON-CRIT DODGE:</div> 
+                        <div>Non-Crit Dodge:</div> 
                         <div id="enemyNonCritDodgeStat"></div>
                     </div>
                     <div id="enemyStunContainer" class="STAT">
-                        <div>STUN:</div> 
+                        <div>Stun:</div> 
                         <div id="enemyStunStat"></div>
                     </div>
                     <div id="enemyAbsorbContainer" class="STAT">
-                        <div>ASBORD:</div> 
+                        <div>Absorb:</div> 
                         <div id="enemyAbsorbStat"></div>
                     </div>
                 </div>
