--- a/index.html
+++ b/index.html
@@ -464,6 +464,9 @@
             </div>
 
             <button id="closeLoveHallButton">Exit</button>
+            <button id="respecButton" style="background-color: red; color: white;">
+                Respec and Restart Embrace
+            </button>
         </div>
     </div>
     <!-- Settings Overlay -->
@@ -471,7 +474,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.9296</h4>
+            <h4>Degens Idle v0.9297</h4>
 
             <div class="settings-section">
                 <h3>Save Management</h3>
