--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.9412</h4>
+            <h4>Degens Idle v0.9413</h4>
 
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -584,6 +584,7 @@
                 <button id="discordButton">
                     <img src="imgs/textures/discord.svg" alt="Discord" id="discordIcon">
                 </button>
+                <button id="wikiButton"><i class="icon-wiki"></i> Wiki</button>
                 <button id="donateButton"><i class="icon-donate"></i> Donate</button>
             </div>
 
