--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
             <!-- Quick Mode Switch for Prestige -->
             <div class="settings-switch" id="quickModePrestigeContainer" style="margin-bottom: 10px; display: none;">
-                <label for="enableQuickModePrestige">Quick Mode for Prestige: Skip confirmation pop-up</label>
+                <label for="enableQuickModePrestige">Quick Prestige: Skip pop-up</label>
                 <label class="switch">
                     <input type="checkbox" id="enableQuickModePrestige">
                     <span class="slider"></span>
@@ -602,7 +602,7 @@
 
             <!-- Quick Mode Switch for Ascend -->
             <div class="settings-switch" id="quickModeAscendContainer" style="margin-bottom: 10px; display: none;">
-                <label for="enableQuickModeAscend">Quick Mode for Ascend: Skip upgrade selection pop-up</label>
+                <label for="enableQuickModeAscend">Quick Ascend: Skip upgrade selection</label>
                 <label class="switch">
                     <input type="checkbox" id="enableQuickModeAscend">
                     <span class="slider"></span>
@@ -611,7 +611,7 @@
 
             <!-- Quick Mode Switch for Transcend -->
             <div class="settings-switch" id="quickModeTranscendContainer" style="margin-bottom: 10px; display: none;">
-                <label for="enableQuickModeTranscend">Quick Mode for Transcend: Skip upgrade selection pop-up</label>
+                <label for="enableQuickModeTranscend">Quick Transcend: Skip upgrade selection</label>
                 <label class="switch">
                     <input type="checkbox" id="enableQuickModeTranscend">
                     <span class="slider"></span>
@@ -620,7 +620,7 @@
 
             <!-- Quick Mode Switch for Big Crunch -->
             <div class="settings-switch" id="quickModeBigCrunchContainer" style="margin-bottom: 10px; display: none;">
-                <label for="enableQuickModeBigCrunch">Quick Mode for Big Crunch: Skip confirmation pop-up</label>
+                <label for="enableQuickModeBigCrunch">Quick Big Crunch: Skip pop-up</label>
                 <label class="switch">
                     <input type="checkbox" id="enableQuickModeBigCrunch">
                     <span class="slider"></span>
@@ -629,7 +629,7 @@
 
             <!-- Quick Mode Switch for Infinite Embrace -->
             <div class="settings-switch" id="quickModeInfiniteEmbraceContainer" style="margin-bottom: 10px; display: none;">
-                <label for="enableQuickModeInfiniteEmbrace">Quick Mode for Infinite Embrace: Skip confirmation pop-up</label>
+                <label for="enableQuickModeInfiniteEmbrace">Quick Infinite Embrace: Skip pop-up</label>
                 <label class="switch">
                     <input type="checkbox" id="enableQuickModeInfiniteEmbrace">
                     <span class="slider"></span>
