--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.9541</h4>
+            <h4>Degens Idle v0.9542</h4>
 
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -530,12 +530,6 @@
                         <button id="importSaveButton">
                             <img src="imgs/textures/upload.png" alt=""> Load File
                         </button>
-
-                        <!-- Checkbox under left column -->
-                        <div class="settings-checkbox">
-                            <input type="checkbox" id="createBackupOnImportCheckbox" name="createBackupOnImport">
-                            <label for="createBackupOnImport">Create Backup on Import</label>
-                        </div>
                     </div>
 
                     <!-- Right Column -->
@@ -547,6 +541,10 @@
                             <img src="imgs/textures/paste.png" alt=""> Paste Save
                         </button>
                     </div>
+                </div>
+                <div class="settings-checkbox">
+                    <input type="checkbox" id="autoSaveCheckbox" name="autoSave">
+                    <label for="autoSave">Auto Save to file before relevant Prestige Layers</label>
                 </div>
             </div>
 
