--- a/adventure/index.html
+++ b/adventure/index.html
@@ -19,7 +19,7 @@
       <!-- Bars Container -->
       <div class="bars-container">
         <!-- Energy Bar -->
-        <div class="status-bar">
+        <div class="status-bar" id="energyBarContainer">
           <span class="status-label">Energy</span>
           <div class="status-bar-bg">
              <div class="status-bar-fill" id="energyBarFill"></div>
