--- a/adventure/index.html
+++ b/adventure/index.html
@@ -62,6 +62,8 @@
       <div id="skills"></div>
     </header>
 
+    <div id="versionBanner"></div>
+
     <!-- Main layout split into two columns -->
     <main class="game-layout">
       <!-- Left column (2/3 width) -->
@@ -76,6 +78,7 @@
       <!-- Right column (1/3 width): zone details, resources, perks -->
       <div class="right-column">
         <h2 id="zoneName"></h2>
+        <div id="zoneAutomation"></div>
         <img id="zoneImage" src="" alt="Zone Image" />
 
         <div id="resourcesContainer">
