--- a/adventure/index.html
+++ b/adventure/index.html
@@ -48,7 +48,7 @@
       
       <!-- Upgrades Container (unchanged except for background styling below) -->
       <div class="upgrades-container">
-        <div class="upgrade-display" style="display:none;">
+        <div class="upgrade-display" id="knowledgeUpgDiv" style="display:none;">
           <span class="upgrade-label">Knowledge</span>
           <span class="upgrade-value" id="knowledgeUpgValue">0</span>
         </div>
