--- a/adventure/index.html
+++ b/adventure/index.html
@@ -52,6 +52,10 @@
           <span class="upgrade-label">Knowledge</span>
           <span class="upgrade-value" id="knowledgeUpgValue">0</span>
         </div>
+        <div class="upgrade-display" id="powerUpgDiv" style="display:none;">
+          <span class="upgrade-label">Power</span>
+          <span class="upgrade-value" id="powerUpgValue">0</span>
+        </div>
         <!-- Other upgrade items… -->
       </div>
     </div>
