--- a/adventure/index.html
+++ b/adventure/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div id="perksContainer">
-          <h3>Perks</h3>
+          <h3>Perks <span id="perkCount" class="perk-count">(0/0)</span></h3>
           <div class="perks-grid"></div>
         </div>
       </div>
