--- a/adventure/index.html
+++ b/adventure/index.html
@@ -121,6 +121,15 @@
       <button id="restartButtonCopium">Restart</button>
     </div>
   </div>
+  
+  <div id="gameOverScreenDelusion" class="hidden">
+    <div id="gameOverContentDelusion">
+      <h2>Game Over</h2>
+      <p>Your delusion is over 9000!</p>
+      <p>You lose 25% of your Power.</p>
+      <button id="restartButtonDelusion">Restart</button>
+    </div>
+  </div>
 
   <!-- Scripts -->
   <script src="formatting.js"></script>
