--- a/adventure/index.html
+++ b/adventure/index.html
@@ -134,6 +134,7 @@
   <!-- Scripts -->
   <script src="formatting.js"></script>
   <script src="zones.js"></script>
+  <script src="perks_and_resources.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
