--- a/adventure/index.html
+++ b/adventure/index.html
@@ -103,36 +103,15 @@
     </footer>
   </div>
 
-  <!-- Game Over Overlays (unchanged) -->
-  <div id="gameOverScreenEnergy" class="hidden">
-    <div id="gameOverContentEnergy">
-      <h2>Game Over</h2>
-      <p>You ran out of energy.</p>
-      <p>You lose half your resources.</p>
-      <button id="restartButtonEnergy">Restart</button>
-    </div>
-  </div>
-  
-  <div id="gameOverScreenCopium" class="hidden">
-    <div id="gameOverContentCopium">
-      <h2>Game Over</h2>
-      <p>It's over 9000! Your copium that is.</p>
-      <p>You lose all your resources and half your knowledge.</p>
-      <button id="restartButtonCopium">Restart</button>
-    </div>
-  </div>
-  
-  <div id="gameOverScreenDelusion" class="hidden">
-    <div id="gameOverContentDelusion">
-      <h2>Game Over</h2>
-      <p>Your delusion is over 9000!</p>
-      <p>You lose 25% of your Power.</p>
-      <button id="restartButtonDelusion">Restart</button>
-    </div>
-  </div>
+  <!-- Remove these static overlays from your HTML -->
+  <div id="gameOverScreenEnergy" class="hidden">…</div>
+  <div id="gameOverScreenCopium" class="hidden">…</div>
+  <div id="gameOverScreenDelusion" class="hidden">…</div>
+
 
   <!-- Scripts -->
   <script src="formatting.js"></script>
+  <script src="sounds.js"></script>
   <script src="zones.js"></script>
   <script src="perks_and_resources.js"></script>
   <script src="game.js"></script>
