--- a/adventure/index.html
+++ b/adventure/index.html
@@ -56,6 +56,10 @@
           <span class="upgrade-label">Power</span>
           <span class="upgrade-value" id="powerUpgValue">0</span>
         </div>
+        <div class="upgrade-display" id="serenityUpgDiv" style="display:none; cursor:pointer;">
+          <span class="upgrade-label">Serenity</span>
+          <span class="upgrade-value" id="serenityUpgValue">0</span>
+        </div>
         <!-- Other upgrade items… -->
       </div>
     </div>
@@ -113,7 +117,7 @@
   <script src="formatting.js"></script>
   <script src="sounds.js"></script>
   <script src="zones.js"></script>
-  <script src="perks_and_resources.js"></script>
+  <script src="resources.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
