--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.961</h4>
+            <h4>Degens Idle v0.962</h4>
 
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -585,6 +585,7 @@
                     <img src="imgs/textures/discord.svg" alt="Discord" id="discordIcon">
                 </button>
                 <button id="wikiButton"><i class="icon-wiki"></i> Wiki</button>
+                <button id="degensAdventureButton"><i class="icon-wiki"></i> Degens Adventure</button>
                 <button id="donateButton"><i class="icon-donate"></i> Donate</button>
             </div>
 
