--- a/adventure/index.html
+++ b/adventure/index.html
@@ -5,6 +5,9 @@
   <!-- Mobile-friendly viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Degens Adventure</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico"> <!-- For older browsers -->
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_32.png"> <!-- For modern browsers -->
+  <link rel="icon" type="image/png" sizes="64x64" href="images/favicon_64.png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
