--- a/adventure/index.html
+++ b/adventure/index.html
@@ -24,7 +24,7 @@
         <!-- Energy Bar -->
         <div class="status-bar" id="energyBarContainer">
           <span class="status-label">Energy</span>
-          <div class="status-bar-bg">
+          <div class="status-bar-bg" id="energyBar">
              <div class="status-bar-fill" id="energyBarFill"></div>
              <span class="status-bar-value" id="energyText">100</span>
           </div>
@@ -33,7 +33,7 @@
         <!-- Copium Bar (initially hidden) -->
         <div class="status-bar" id="copiumBarContainer" style="display:none;">
           <span class="status-label">Copium</span>
-          <div class="status-bar-bg">
+          <div class="status-bar-bg" id="copiumBar">
              <div class="status-bar-fill" id="copiumBarFill"></div>
              <span class="status-bar-value" id="copiumText">0</span>
           </div>
@@ -42,7 +42,7 @@
         <!-- Delusion Bar (initially hidden) -->
         <div class="status-bar" id="delusionBarContainer" style="display:none;">
           <span class="status-label">Delusion</span>
-          <div class="status-bar-bg">
+          <div class="status-bar-bg" id="delusionBar">
              <div class="status-bar-fill" id="delusionBarFill"></div>
              <span class="status-bar-value" id="delusionText">0</span>
           </div>
