--- a/adventure/index.html
+++ b/adventure/index.html
@@ -115,6 +115,7 @@
 
 
   <!-- Scripts -->
+  <script src="tutorial.js"></script>
   <script src="formatting.js"></script>
   <script src="sounds.js"></script>
   <script src="zones.js"></script>
