--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.975</h4>
+            <h4>Degens Idle v0.9751</h4>
 
             <div class="settings-section">
                 <h3>Save Management</h3>
@@ -563,6 +563,7 @@
                 <h3>Gameplay Options</h3>
                 <div class="settings-buttons">
                     <button id="howToPlayButton"><i class="icon-info"></i> How to Play?</button>
+                    <button id="trailerButton"><i class="icon-info"></i> Game Trailer</button>
                     <button id="numberFormatButton" class="full-width-button">Number Format: Mixed</button>
                 </div>
                 <div class="settings-switch" style="margin-bottom: 10px;">
