Sloppy Al Gore v1.0

--- a/gore/index.html
+++ b/gore/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Sloppy Al Gore</h1>
-    <p>Made by AI Slop, powered by AI Slop, and somehow involving Al Gore.</p>
+    <p>A game about AI Slop, powered by AI Slop, and somehow involving Al Gore.</p>
   </header>
   <main>
     <div id="game">
@@ -78,7 +78,7 @@
         </div>
         <div id="transcendentAwakeningContainer" style="display:none; margin-top:8px;">
           <button id="transcendentAwakeningButton">
-            Transcendent Awakening — +∛(AI Slop) Awakenings/sec (100M Cosmic Rebirths)
+            Transcendent Awakening — +∜(AI Slop) Awakenings/sec (100M Cosmic Rebirths)
           </button>
         </div>
         <div id="cosmicGoreContainer" style="display:none">
